solution/app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team62-frontend
        name: frontend
        ports:
        - containerPort: 8080
          name: fport
      restartPolicy: Always
